stylesheet.css
body{
    display:flex;
    flex-direction: column;
    height:100%;
    user-select: none;
}

#PluginContainer{
    flex:1;
    overflow-y:scroll;
    overflow-x:hidden;
}

/* the accent color of the install switch */
#PluginContainer .switch[type=checkbox].is-success:checked+label::before, .switch[type=checkbox].is-success:checked+label:before {
    background: #77d0ec;
}

#MainLoader.control.is-loading{
    width: 66%;
    font-size:4rem;
    height:150px;
}

#FindingText{
    font-size:1rem;
    position: absolute;
    bottom: 0;
    text-align: center;
    left: 22%;
    width: 100%;
}

#InstallPluginControls{
    margin-bottom:10px;
    padding:10px;
    position: relative;
}

#InstallPluginControls input{
    width:100%;
}

#InstallPluginControls i{
    font-size: 22px;
    padding: 10px;
}

#InstallPluginControls a{
    color: #4676a9;
    position: absolute;
    top:33px;
    right:10px;
}

h1{
    font-size: 20px !important;
    font-family: Arial !important;
    color: gray !important;
    font-weight: bold !important;
    margin-bottom: 0 !important;
    padding: 0px 10px 10px 10px !important;
}

li {
    list-style-type: none;
}

#PluginContainer ul li {
    padding: 5px 10px 5px 12px;
}

li .field {
    margin-top: 6px;
}

.pluginName{
    font-weight:bold;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.pluginDescription{
    font-size:12px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.githubButton{
    margin-right: 10px;
    display: inline-block;
}

.authorContainer img{
    float:left;
    height:20px;
    width:20px;
    border-radius: 10px;
}

.authorContainer div{
    float:left;
    font-size:12px;
    width: 100px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    margin-left:5px;
}

.pluginStarsContainer{
    float: left;
    margin-right:10px;
}

.pluginStarsContainer .starCount{
    float: left;
}

.pluginStarsContainer .fa-star{
    float: left;
    margin-top: 3px;
    margin-right: 3px;
}

.isPromoted .fa-star{
    color:gold;
}

.pluginList.open ul{
    display:block;
}

.pluginList.closed ul{
    display:none;
}

.pluginList li{
    position: relative;
    cursor:pointer;
    border-top: solid 1px #ccc;
}

.pluginList li:hover{
    background-color: #edf8fc;
}

.pluginList li .preview{
    display:none;
    background-color:white;
    position:absolute;
    top:30px;
    left:20px;
    right:20px;
    border:solid 1px #ccc;
    z-index:2;
    padding: 20px;
    transform: scale(.8);
    transform-origin: top;
    outline:none;
    cursor:default;
    max-height:300px;
    overflow-y: scroll;
}

.pluginList li .control.is-loading{
    width: 66%;
    font-size:2rem;
    height:100px;
}

.pluginList li.active .preview{
    display:block;
}

.pluginList li .columns{
    margin-bottom:0px;
}

.pluginList li .column{
    padding-bottom: 0px;
}

.columns {
    padding-top: 10px;
    padding-bottom: 10px;
}

.pluginList li .pluginControls{
    padding: 11px 2px 0 0;
}

.pluginList li .pluginControls .githubButton,
.pluginList li .pluginControls .field{
    float:right;
}

.pluginList li .pluginIcon{
    padding-right:0px;
    max-width: 40px;
    margin-top: 16px;
}

.pluginList li .pluginContent{
    padding-left:10px 0 0 0;
}

#pluginRow {
    margin-left: 10px;
    margin-right: 10px;
}

.groupHeader{
    cursor:pointer;
    position:relative;
    padding-top: 10px;
    padding-left: 10px;
    padding-bottom: 10px;
    margin: 10px;
    background-color: hsl(0, 0%, 95%);
}

.groupHeader:hover {
    background-color: #edf8fc;
}

.groupHeader.open {
    background-color: #ebfaff
}

.groupHeader:active {
    background-color: #ebfaff
}

.groupHeader i{
    margin-right:5px;
}

.groupHeader .groupDescription {
    font-size: 11px;
    margin-left: 10px;
    color: gray;
}

.groupHeader .count{
    background-color: white;
    border: 1px solid #4676a9;
    font-size: 12px;
    font-weight: 600;
    color: grey;
    border-radius: 20px;
    width: 25px;
    height: 25px;
    position: absolute;
    right: 10px;
    text-align: center;
    top: 2px;
    margin-top: 9px;
    padding-top: 3px;
}

.preview h1{
    padding: 0 !important;
}

.preview img{
    border: solid 1px gray;
}

.pluginBadge + h1 {
    margin-left:25px;
}

